--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
     <!--Header-->
     <header>
         <div class="container header-container">
-            <nav class="main-nav">
-                <a href="#" class="logo logo--rightIndent"><span class="logo__prepend">Web</span>Studio</a>
-                <ul class="list main-nav__list">
-                    <li class="main-nav__item"><a href="" class="main-nav__link main-nav__link--current">Студия</a></li>
-                    <li class="main-nav__item"><a href="/portfolio.html" class="link main-nav__link">Портфолио</a></li>
-                    <li class="main-nav__item"><a href="" class="link main-nav__link">Контакты</a></li>
-                </ul>            
-            </nav>
-            <ul class="nav-contact list">
-                <li class="nav-contact__item"><a href="mailto:info@devstudio.com" class="link nav-contact__link"><svg class="mail-icon"><use href="./images/icons.svg#envelope"></use></svg>info@devstudio.com</a></li>
-                <li class="nav-contact__item"><a href="tel:+38096111111" class="link nav-contact__link"><svg class="tel-icon"><use href="./images/icons.svg#smartphone"></use></svg>+38 (096) 111-11-11</a></li>
-            </ul>
+            <a href="#" class="logo"><span class="logo__prepend">Web</span>Studio</a>
+            <div class="nav-container">
+                <nav class="main-nav">
+                    <ul class="list main-nav__list">
+                        <li class="main-nav__item"><a href="" class="main-nav__link main-nav__link--current">Студия</a></li>
+                        <li class="main-nav__item"><a href="/portfolio.html" class="link main-nav__link">Портфолио</a></li>
+                        <li class="main-nav__item"><a href="" class="link main-nav__link">Контакты</a></li>
+                    </ul>            
+                </nav>
+                <ul class="nav-contact list">
+                    <li class="nav-contact__item"><a href="mailto:info@devstudio.com" class="link nav-contact__link"><svg class="mail-icon"><use href="./images/icons.svg#envelope"></use></svg>info@devstudio.com</a></li>
+                    <li class="nav-contact__item"><a href="tel:+38096111111" class="link nav-contact__link"><svg class="tel-icon"><use href="./images/icons.svg#smartphone"></use></svg>+38 (096) 111-11-11</a></li>
+                </ul>
+            </div>
         </div>
     </header>
     <!--main-->
@@ -45,22 +47,22 @@
                     <li class="advantage__item">
                         <div class="advantage__overlay"><img src="./images/details-1.svg#details-1" class="advantage__image" alt="Внимание деталей"></div>
                         <h3 class="advantage__title">Внимание к деталям</h3>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        <p class="advantage__discription">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="advantage__item">
                         <div class="advantage__overlay"><img class="advantage__image" src="./images/clock-1.svg#clock-1" alt="Пунктуальность"></div>
                         <h3 class="advantage__title">Пунктуальность</h3>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        <p class="advantage__discription">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="advantage__item">
                         <div class="advantage__overlay"><img src="./images/diagram-1.svg#diagram-1" class="advantage__image" alt="Планирование"></div>
                         <h3 class="advantage__title">Планирование</h3>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        <p class="advantage__discription">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="advantage__item">
                         <div class="advantage__overlay"><img src="./images/astronaut-1.svg#astronaut-1" class="advantage__image" alt="Технологии"></div>
                         <h3 class="advantage__title">Современные технологии</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        <p class="advantage__discription">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
             <!-- </div> -->
@@ -85,7 +87,7 @@
         <!--Our Team-->
         <section class="section team">
             <div class="container">
-            <h2 class="section__title">Наша команда</h2>
+            <h2 class="section__title team__title">Наша команда</h2>
             <ul class="list team__list">
                 <li class="team__item">
                     <img class="team__image" src="./images/img-4.jpg" alt="Product Designer">
