--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,8 @@
     <!--Header-->
     <header>
         <div class="container header-container">
+            <a href="#" class="logo"><span class="logo__prepend">Web</span>Studio</a>
             <nav class="main-nav">
-                <a href="#" class="logo logo--rightIndent"><span class="logo__prepend">Web</span>Studio</a>
                 <ul class="list main-nav__list">
                     <li class="main-nav__item"><a href="/index.html" class="link main-nav__link">Студия</a></li>
                     <li class="main-nav__item"><a href="" class="link main-nav__link main-nav__link--current">Портфолио</a></li>
