--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     <header>
         <div class="container header-container">
             <a href="#" class="logo"><span class="logo__prepend">Web</span>Studio</a>
-            <div class="nav-container">
+            <button type="button" class="menu-btn" aria-expanded="false" aria-controls="nav-container" data-menu-button>
+                <svg class="mob-menu-icons" width="36" height="36" aria-label="mobile menu switcher">
+                    <use class="icon-close" href="./images/btn-close-icon.svg#btn-close-icon"></use>
+                    <use class="icon-menu" href="./images/btn-menu-icon.svg#btn-menu-icon"></use>
+                </svg>
+            </button>
+            <div class="nav-container" id="nav-container" data-menu>
                 <nav class="main-nav">
                     <ul class="list main-nav__list">
                         <li class="main-nav__item"><a href="" class="main-nav__link main-nav__link--current">Студия</a></li>
@@ -24,10 +30,16 @@
                     </ul>            
                 </nav>
                 <ul class="nav-contact list">
-                    <li class="nav-contact__item"><a href="mailto:info@devstudio.com" class="link nav-contact__link"><svg class="mail-icon"><use href="./images/icons.svg#envelope"></use></svg>info@devstudio.com</a></li>
-                    <li class="nav-contact__item"><a href="tel:+38096111111" class="link nav-contact__link"><svg class="tel-icon"><use href="./images/icons.svg#smartphone"></use></svg>+38 (096) 111-11-11</a></li>
+                    <li class="nav-contact__item main-nav__mob-tel"><a href="tel:+38096111111" class="link nav-contact__link"><svg class="tel-icon"><use href="./images/icons.svg#smartphone"></use></svg>+38 (096) 111-11-11</a></li>
+                    <li class="nav-contact__item main-nav__mob-email"><a href="mailto:info@devstudio.com" class="link nav-contact__link"><svg class="mail-icon"><use href="./images/icons.svg#envelope"></use></svg>info@devstudio.com</a></li>
                 </ul>
-            </div>
+                <ul class="mob-social list">
+                    <li class="mob-social__item"><a href="#" class="link mob-social__link">Instagram</a></li>
+                    <li class="mob-social__item"><a href="#" class="link mob-social__link">Twitter</a></li>
+                    <li class="mob-social__item"><a href="#" class="link mob-social__link">Facebook</a></li>
+                    <li class="mob-social__item"><a href="#" class="link mob-social__link">Linkedln</a></li>
+                </ul>
+            </div>       
         </div>
     </header>
     <!--main-->
@@ -65,9 +77,10 @@
                         <p class="advantage__discription">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
-            <!-- </div> -->
-<!--What are we doing-->
-                <div class="doing">
+        </section>
+        <!--What are we doing-->
+        <section class="section section-doing">
+                <div class="container doing">
                     <h2 class="section__title doing__title">Чем мы занимаемся</h2>
                     <ul class="list doing__list">
                         <li class="doing__item">
@@ -171,7 +184,7 @@
          <!--Our Clients-->
         <section class="section clients">
             <div class="container">
-                <h2 class="section__title">Постоянные клиенты</h2>
+                <h2 class="section__title clients__title">Постоянные клиенты</h2>
                 <ul class="clients__list list">
                     <li class="clients__item">
                         <a href="#" class="clients__link">
@@ -296,7 +309,7 @@
                     <label class="checkbox__label">
                         <input type="checkbox" class="checkbox__input" name="policy">
                         <span class="checkbox__icon"></span>
-                        Соглашаюсь с рассылкой и принимаю&nbsp;<a href="#"> Условия договора</a>
+                        Соглашаюсь с рассылкой и принимаю&nbsp;<a href="#" class="policy-link">Условия договора</a>
                     </label>
                 </div>
                 <div class="button-container">
@@ -306,5 +319,6 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/data-menu-button.js"></script>
 </body>
 </html>
