--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,27 @@
                 <ul class="list grid portfolio-cases">
                     <li class="grid__item">
                         <div class="img-overlay">
-                            <img class="grid__img" src="./images/portfolio-1.jpg" alt="Разработка Веб сайтов">
+                            <picture class="grid__img">
+                                    <source srcset="
+                                        ./images/portfol_1_desk_1x_370.jpg 1x,
+                                        ./images/portfol_1_desk_2x_740.jpg 2x
+                                        "
+                                        media="(min-width:1200px)"
+                                    />
+                                    <source srcset="
+                                        ./images/portfol_1_tab_1x_354.jpg 1x,
+                                        ./images/portfol_1_tab_2x_708.jpg 2x
+                                        "
+                                        media="(min-width:768px)"
+                                    />
+                                    <source srcset="
+                                        ./images/portfol_1_mob_1x_450.jpg 1x,
+                                        ./images/portfol_1_mob_2x_900.jpg 2x
+                                        "
+                                        media="(min-width:480px)"   
+                                    />
+                                <img class="pic-img" src="./images/portfol_1_mob_1x_450.jpg" alt="Разработка Веб сайтов">
+                            </picture>
                             <div class="grid__discription">
                                 Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                             </div>
@@ -70,7 +90,28 @@
                     </li>
                     <li class="grid__item">
                         <div class="img-overlay">
-                            <img class="grid__img" src="./images/portfolio-2.jpg" alt="Разработка постеров и банерной рекламы">
+                            <picture class="grid__img">
+                                <source srcset="
+                                ./images/portfol_2_desk_1x_370.jpg 1x,
+                                ./images/portfol_2_desk_2x_740.jpg 2x
+                                "
+                                media="(min-width:1200px)"
+                            />
+                            <source srcset="
+                                ./images/portfol_2_tab_1x_354.jpg 1x,
+                                ./images/portfol_2_tab_2x_708.jpg 2x
+                                "
+                                media="(min-width:768px)"
+                            />
+                            <source srcset="
+                                ./images/portfol_2_mob_1x_450.jpg 1x,
+                                ./images/portfol_2_mob_2x_900.jpg 2x
+                                "
+                                media="(min-width:480px)"
+                            />
+                            <img class="pic-img" src="./images/portfol_2_mob_1x_450.jpg" alt="Разработка постеров и банерной рекламы">
+                        </picture>
+
                             <div class="grid__discription">
                                 Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                             </div>
@@ -82,7 +123,27 @@
                     </li>
                     <li class="grid__item">
                         <div class="img-overlay">
-                            <img class="grid__img" src="./images/portfolio-3.jpg" alt="Разработка мобилльных приложений">
+                            <picture class="grid__img">
+                                <source srcset="
+                                ./images/portfol_3_desk_1x_370.jpg 1x,
+                                ./images/portfol_3_desk_2x_740.jpg 2x
+                                "
+                                media="(min-width:1200px)"
+                            />
+                            <source srcset="
+                                ./images/portfol_3_tab_1x_354.jpg 1x,
+                                ./images/portfol_3_tab_2x_708.jpg 2x
+                                "
+                                media="(min-width:768px)"
+                            />
+                            <source srcset="
+                                ./images/portfol_3_mob_1x_450.jpg 1x,
+                                ./images/portfol_3_mob_2x_900.jpg 2x
+                                "
+                                media="(min-width:480px)"
+                            />
+                            <img class="pic-img" src="./images/portfol_3_mob_1x_450.jpg" alt="Разработка мобилльных приложений">
+                        </picture>
                             <div class="grid__discription">
                                 Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                             </div>
@@ -94,7 +155,27 @@
                     </li>
                     <li class="grid__item">
                         <div class="img-overlay">
-                            <img class="grid__img" src="./images/portfolio-4.jpg" alt="Разработка дизайна продукции">
+                            <picture class="grid__img">
+                                <source srcset="
+                                ./images/portfol_4_desk_1x_370.jpg 1x,
+                                ./images/portfol_4_desk_2x_740.jpg 2x
+                                "
+                                media="(min-width:1200px)"
+                            />
+                            <source srcset="
+                                ./images/portfol_4_tab_1x_354.jpg 1x,
+                                ./images/portfol_4_tab_2x_708.jpg 2x
+                                "
+                                media="(min-width:768px)"
+                            />
+                            <source srcset="
+                                ./images/portfol_4_mob_1x_450.jpg 1x,
+                                ./images/portfol_4_mob_2x_900.jpg 2x
+                                "
+                                media="(min-width:480px)"
+                            />
+                            <img class="pic-img" src="./images/portfol_4_mob_1x_450.jpg" alt="Разработка дизайна продукции">
+                        </picture>
                             <div class="grid__discription">
                                 Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                             </div>
@@ -106,8 +187,28 @@
                     </li>
                     <li class="grid__item">
                         <div class="img-overlay">
-                            <img class="grid__img" src="./images/portfolio-5.jpg" alt="Разработка дизайна упаковки">
-                            <div class="grid__discription">
+                            <picture class="grid__img">
+                                <source srcset="
+                                ./images/portfol_5_desk_1x_370.jpg 1x,
+                                ./images/portfol_5_desk_2x_740.jpg 2x
+                                "
+                                media="(min-width:1200px)"
+                            />
+                            <source srcset="
+                                ./images/portfol_5_tab_1x_354.jpg 1x,
+                                ./images/portfol_5_tab_2x_708.jpg 2x
+                                "
+                                media="(min-width:768px)"
+                            />
+                            <source srcset="
+                                ./images/portfol_5_mob_1x_450.jpg 1x,
+                                ./images/portfol_5_mob_2x_900.jpg 2x
+                                "
+                                media="(min-width:480px)"
+                            />
+                            <img class="pic-img" src="./images/portfol_5_mob_1x_450.jpg">
+                        </picture>
+                            <div class="grid__discription" alt="Разработка дизайна упаковки">
                                 Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                             </div>
                         </div>    
@@ -118,7 +219,27 @@
                     </li>
                     <li class="grid__item">
                         <div class="img-overlay">
-                            <img class="grid__img" src="./images/portfolio-6.jpg" alt="Поиск идеи для продвижения">
+                            <picture class="grid__img">
+                                <source srcset="
+                                ./images/portfol_6_desk_1x_370.jpg 1x,
+                                ./images/portfol_6_desk_2x_740.jpg 2x
+                                "
+                                media="(min-width:1200px)"
+                            />
+                            <source srcset="
+                                ./images/portfol_6_tab_1x_354.jpg 1x,
+                                ./images/portfol_6_tab_2x_708.jpg 2x
+                                "
+                                media="(min-width:768px)"
+                            />
+                            <source srcset="
+                                ./images/portfol_6_mob_1x_450.jpg 1x,
+                                ./images/portfol_6_mob_2x_900.jpg 2x
+                                "
+                                media="(min-width:480px)"
+                            />
+                            <img class="pic-img" src="./images/portfol_6_mob_1x_450.jpg" alt="Поиск идеи для продвижения">
+                        </picture>
                             <div class="grid__discription">
                                 Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                             </div>
@@ -130,7 +251,27 @@
                     </li>
                     <li class="grid__item">
                         <div class="img-overlay">
-                            <img class="grid__img" src="./images/portfolio-7.jpg" alt="Разработка уникального дизайна продукции">
+                            <picture class="grid__img">
+                                <source srcset="
+                                ./images/portfol_7_desk_1x_370.jpg 1x,
+                                ./images/portfol_7_desk_2x_740.jpg 2x
+                                "
+                                media="(min-width:1200px)"
+                            />
+                            <source srcset="
+                                ./images/portfol_7_tab_1x_354.jpg 1x,
+                                ./images/portfol_7_tab_2x_708.jpg 2x
+                                "
+                                media="(min-width:768px)"
+                            />
+                            <source srcset="
+                                ./images/portfol_7_mob_1x_450.jpg 1x,
+                                ./images/portfol_7_mob_2x_900.jpg 2x
+                                "
+                                media="(min-width:480px)"
+                            />
+                            <img class="pic-img" src="./images/portfol_7_mob_1x_450.jpg" alt="Разработка уникального дизайна продукции">
+                        </picture>
                             <div class="grid__discription">
                                 Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                             </div>
@@ -142,7 +283,27 @@
                     </li>
                     <li class="grid__item">
                         <div class="img-overlay">
-                            <img class="grid__img" src="./images/portfolio-8.jpg" alt="Разработка макетов">
+                            <picture class="grid__img">
+                                <source srcset="
+                                ./images/portfol_8_desk_1x_370.jpg 1x,
+                                ./images/portfol_8_desk_2x_740.jpg 2x
+                                "
+                                media="(min-width:1200px)"
+                            />
+                            <source srcset="
+                                ./images/portfol_8_tab_1x_354.jpg 1x,
+                                ./images/portfol_8_tab_2x_708.jpg 2x
+                                "
+                                media="(min-width:768px)"
+                            />
+                            <source srcset="
+                                ./images/portfol_8_mob_1x_450.jpg 1x,
+                                ./images/portfol_8_mob_2x_900.jpg 2x
+                                "
+                                media="(min-width:480px)"
+                            />
+                            <img class="pic-img" src="./images/portfol_8_mob_1x_450.jpg" alt="Разработка макетов">
+                        </picture>
                             <div class="grid__discription">
                                 Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                             </div>
@@ -153,8 +314,28 @@
                     </div>
                     </li>
                     <li class="grid__item">
-                        <div class="img-overlay">
-                            <img class="grid__img" src="./images/portfolio-9.jpg" alt="Поиск точек роста вашего бизнеса">
+                        <div class="img-overlay">                          
+                            <picture class="grid__img">
+                                    <source srcset="
+                                    ./images/portfol_9_desk_1x_370.jpg 1x,
+                                    ./images/portfol_9_desk_2x_740.jpg 2x
+                                    "
+                                    media="(min-width:1200px)"
+                                    />
+                                    <source srcset="
+                                        ./images/portfol_9_tab_1x_354.jpg 1x,
+                                        ./images/portfol_9_tab_2x_708.jpg 2x
+                                        "
+                                        media="(min-width:768px)"
+                                    />
+                                    <source srcset="
+                                        ./images/portfol_9_mob_1x_450.jpg 1x,
+                                        ./images/portfol_9_mob_2x_900.jpg 2x
+                                        "
+                                        media="(min-width:480px)"
+                                    />
+                                    <img class="pic-img" src="./images/portfol_9_mob_1x_450.jpg" alt="Поиск точек роста вашего бизнеса">
+                            </picture>
                             <div class="grid__discription">
                                 Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                             </div>
